# enginaator-2026

./: .gitignore  CHANGES.md  README.md  pyproject.toml
app/: db.py  llm.py  main.py  run.py
backend/: server.py  webSpeech.py
public/src/: index.html
public/src/assets/css/: dashboard.css  login.css  style.css
public/src/assets/js/: dashboard.js  modelViewer.js  script.js  tablet.js  toasts.js
public/src/assets/models/: crossmark.glb
public/src/dashboard/: index.html
